fix(mobile-nav): fixed avatar dropdown on mobile and nav z-index

--- a/src/components/general/BackButton/BackButton.scss
+++ b/src/components/general/BackButton/BackButton.scss
@@ -4,4 +4,5 @@
   display: flex;
   align-items: center;
   gap: 8.56px;
+  color: var(--accent-color-1);
 }
