--- a/src/components/layout/Sidebar/Sidebar.scss
+++ b/src/components/layout/Sidebar/Sidebar.scss
@@ -1,6 +1,7 @@
 @import '../../../styles/mixins.scss';
 
 .Sidebar {
+  z-index: 1;
   position: fixed;
   bottom: 5%;
   left: 50%;
